--- a/VSACReactNative/android/app/src/main/res/values/strings.xml
+++ b/VSACReactNative/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey">65Fc0jsxLIRLUnxgU83g98mdL0hOHyaURfNYz</string>
     <string name="app_name">VSACReactNative</string>
     <string name="appCenterAnalytics_whenToEnableAnalytics" moduleConfig="true">ENABLE_IN_JS</string>
     <string name="appCenterCrashes_whenToSendCrashes" moduleConfig="true">ALWAYS_SEND</string>
